Remove obsolete old (V1.2.0) version of XMLSecTool.